--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url("/public/background-image.png");
+  background-image: url("/background-image.png");
   background-repeat: repeat;
 }
